--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,7 +24,11 @@ jobs:
     - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14.x'
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+        
+    - name: Install Yarn
+      run: npm install -g yarn
         
     - name: Install dependencies
       run: yarn
